Ask maven to produce javadoc

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,18 @@
 
   <build>
     <plugins>
+    	<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar-with-dependencies</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>2.5.3</version>
