--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,15 @@
       <version>1.1.3</version>
     </dependency>
     <dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>persistence-api</artifactId>
-      <version>1.0</version>
-    </dependency>
+		<groupId>org.eclipse.persistence</groupId>
+		<artifactId>eclipselink</artifactId>
+		<version>2.5.0</version>
+	</dependency>
+    <dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.6</version>
+	</dependency>
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
@@ -50,7 +55,7 @@
             <execution>
               <id>attach-javadocs</id>
               <goals>
-                <goal>jar-with-dependencies</goal>
+                <goal>jar</goal>
               </goals>
             </execution>
           </executions>
